14 February 2018 - Tom Spettigue Rearranged head elements.

--- a/index.html
+++ b/index.html
@@ -2,9 +2,13 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <title>HTML·CSS·SASS boilerplate</title>
+
+    <!-- External CSS -->
     <link rel="stylesheet" type="text/css" href="stylesheets/css/reset-min.css">
     <link rel="stylesheet" type="text/css" href="stylesheets/css/core-min.css">
-    <title>HTML·CSS·SASS boilerplate</title>
+
+    
   </head>
   <body>
     <p>This is Tom's HTML, CSS, and SASS boilerplate.</p>
