Initial commit, homepage built and basic layout complete.

--- a/index.html
+++ b/index.html
@@ -2,14 +2,51 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>HTML·CSS·SASS boilerplate</title>
+    <title>Navigo Corporation - Your Slogan Here!</title>
 
     <!-- External CSS -->
     <link rel="stylesheet" type="text/css" href="stylesheets/css/reset-min.css">
     <link rel="stylesheet" type="text/css" href="stylesheets/css/core-min.css">
 
+    <link href="https://fonts.googleapis.com/css?family=Barlow+Condensed:300,400|Playfair+Display+SC:400,900" rel="stylesheet">
+
   </head>
   <body>
-    <p>This is Tom's HTML, CSS, and SASS boilerplate.</p>
+    <div class="siteContent">
+      <div id="banner">
+        <p>Navigo Corporation</p>
+      </div>
+      <div class="underBanner">
+        <div class="navBar">
+          <div class="navSpacer">
+          </div>
+          <div class="navButton">
+            <p>Home</p>
+          </div>
+          <div class="navButton">
+            <p>Gallery</p>
+          </div>
+          <div class="navButton">
+            <p>Pricing</p>
+          </div>
+          <div class="navButton">
+            <p>Forum</p>
+          </div>
+          <div class="navButton">
+            <p>Calendar</p>
+          </div>
+          <div class="navButton">
+            <p>About</p>
+          </div>
+        </div>
+        <div class="pageContent">
+          <div id="heroImage">
+          </div>
+          <h1>Welcome to Reggae.</h1>
+          <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</p>
+        </div>
+      </div>
+    </div>
+    </div>
   </body>
 </html>
