--- a/index.html
+++ b/index.html
@@ -43,8 +43,7 @@
           <div id="heroImage">
           </div>
           <h1>Welcome to Reggae.</h1>
-          <p>Did this work?</p>
-          <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</p>
+          <p><a href="awus036h-win7.zip"></a>Alfa Networks AWUS036H Driver (for Windows 7)</p>
         </div>
       </div>
     </div>
