Removed the link to the Alfa Networks driver, added some filler paragraph text.

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           <div id="heroImage">
           </div>
           <h1>Welcome to Reggae.</h1>
-          <p><a href="awus036h-win7.zip"></a>Alfa Networks AWUS036H Driver (for Windows 7)</p>
+          <p>This is the homepage of the sailboat "Reggae" in the British Virgin Islands.</p>
         </div>
       </div>
     </div>
