completed navbar and menus

--- a/index.html
+++ b/index.html
@@ -1,52 +1,43 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Navigo Corporation - Your Slogan Here!</title>
-
-    <!-- External CSS -->
-    <link rel="stylesheet" type="text/css" href="stylesheets/css/reset-min.css">
+    <title>Navigo Corporation - It's your time to sail</title>
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+    <link href="https://fonts.googleapis.com/css?family=Barlow+Condensed:300,400,700" rel="stylesheet">
+    <!-- EXTERNAL STYLESHEETS -->
     <link rel="stylesheet" type="text/css" href="stylesheets/css/core-min.css">
-
-    <link href="https://fonts.googleapis.com/css?family=Barlow+Condensed:300,400|Playfair+Display+SC:400,900" rel="stylesheet">
-
   </head>
   <body>
-    <div class="siteContent">
-      <div id="banner">
-        <p>Navigo Corporation</p>
-      </div>
-      <div class="underBanner">
-        <div class="navBar">
-          <div class="navSpacer">
+    <div id="siteContainer">
+      <div id="navBar">
+        <div id="navBarLogo">
+          <div id="logo"></div>
+          <span class="barlowBold">NAVIGO</span><span class="barlowLight">CORPORATION</span>
+        </div>
+        <div id="navBarOptions">
+          <div class="navBarOption"><a href="index.html"><span>HOME</span></a></div>
+          <div class="navBarOption"><a href="#"><span>GALLERY</span></a></div>
+          <div class="navBarOption"><a href="#"><span>MEMBERS</span></a>
+            <div class="navBarMenu" id="membersMenu">
+              <ul>
+                <li><a href="#"><span class="barlowLight">Calendar</span></a></li>
+                <li><a href="#"><span class="barlowLight">Forum</span></a></li>
+              </ul>
+            </div>
           </div>
-          <div class="navButton">
-            <p>Home</p>
-          </div>
-          <div class="navButton">
-            <p>Gallery</p>
-          </div>
-          <div class="navButton">
-            <p>Pricing</p>
-          </div>
-          <div class="navButton">
-            <p>Forum</p>
-          </div>
-          <div class="navButton">
-            <p>Calendar</p>
-          </div>
-          <div class="navButton">
-            <p>About</p>
+          <div class="navBarOption"><a href="#"><span>ABOUT</span></a>
+            <div class="navBarMenu" id="aboutMenu">
+              <ul>
+                <li><a href="#"><span class="barlowLight">Deck&nbsp;Plan</span></a></li>
+                <li><a href="#"><span class="barlowLight">Locations</span></a></li>
+                <li><a href="#"><span class="barlowLight">Pricing</span></a></li>
+                <li><a href="#"><span class="barlowLight">Contact&nbsp;Us</span></a></li>
+              </ul>
+            </div>
           </div>
         </div>
-        <div class="pageContent">
-          <div id="heroImage">
-          </div>
-          <h1>Welcome to Reggae.</h1>
-          <p>This is the homepage of the sailboat "Reggae" in the British Virgin Islands.</p>
-        </div>
       </div>
-    </div>
     </div>
   </body>
 </html>
