Finished the hero panes

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Navigo Corporation - It's your time to sail</title>
+    <title>Navigo Corporation - It's your time to sail!</title>
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <link href="https://fonts.googleapis.com/css?family=Barlow+Condensed:300,400,700" rel="stylesheet">
     <!-- EXTERNAL STYLESHEETS -->
@@ -10,10 +10,13 @@
   </head>
   <body>
     <div id="siteContainer">
+
+      <!-- Navigation Bar -->
+
       <div id="navBar">
         <div id="navBarLogo">
           <div id="logo"></div>
-          <span class="barlowBold">NAVIGO</span><span class="barlowLight">CORPORATION</span>
+          <h1><span class="barlowBold">NAVIGO</span><span class="barlowLight">CORPORATION</span></h1>
         </div>
         <div id="navBarOptions">
           <div class="navBarOption"><a href="index.html"><span>HOME</span></a></div>
@@ -36,6 +39,33 @@
               </ul>
             </div>
           </div>
+        </div>
+      </div>
+
+      <!-- Heroes -->
+
+      <div class="heroContainer">
+        <!-- <div class="heroImage" id="scenery"></div> -->
+        <img src="stylesheets/css/imgs/scenery.jpg" alt="A powerboat cruising in front of Piton Bay.">
+        <div class="heroTextContainer">
+          <h1>Witness&nbsp;Grandeur</h1>
+          <span>Experience some of nature’s spectacle up close and personal, from the comfort and familiarity of Reggae.</span>
+        </div>
+      </div>
+      <div class="heroContainer">
+        <div class="heroTextContainer">
+          <h1>Experience&nbsp;the&nbsp;Tropics</h1>
+          <span>Enjoy one of hundreds of unique experiences in the British Virgin Islands, from the wonder of diving to the serenity of a beach.</span>
+        </div>
+        <img src="stylesheets/css/imgs/beach.jpg" alt="A tropical beach with clouds and the sea to the left and land to the right.">
+        <!-- <div class="heroImage" id="beach"></div> -->
+      </div>
+      <div class="heroContainer">
+        <!-- <div class="heroImage" id="moorings"></div> -->
+        <img src="stylesheets/css/imgs/moorings.jpg" alt="Boats moored to a dock.">
+        <div class="heroTextContainer">
+          <h1>Explore&nbsp;with&nbsp;Confidence</h1>
+          <span>Professional services, fuel, groceries, restaurants, and libations are available from over 20 world-renowned ports in the B.V.I.</span>
         </div>
       </div>
     </div>
