--- a/gallery/index.html
+++ b/gallery/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Navigo Corporation - It's your time to sail!</title>
-    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="../favicon.png">
     <link href="https://fonts.googleapis.com/css?family=Barlow+Condensed:300,400,700" rel="stylesheet">
     <!-- EXTERNAL STYLESHEETS -->
     <link rel="stylesheet" type="text/css" href="../stylesheets/css/core-min.css">
@@ -19,7 +19,7 @@
           <h1><span class="barlowBold">NAVIGO</span><span class="barlowLight">CORPORATION</span></h1>
         </div>
         <div id="navBarOptions">
-          <div class="navBarOption"><a href="index.html"><span>HOME</span></a></div>
+          <div class="navBarOption"><a href="../index.html"><span>HOME</span></a></div>
           <div class="navBarOption"><a href="#"><span>GALLERY</span></a></div>
           <div class="navBarOption"><a href="#"><span>MEMBERS</span></a>
             <div class="navBarMenu" id="membersMenu">
