Fixed images, made them divs, replaced spans with <p> tags

--- a/index.html
+++ b/index.html
@@ -68,27 +68,27 @@
       <!-- Heroes -->
 
       <div class="heroContainer">
-        <!-- <div class="heroImage" id="scenery"></div> -->
-        <img src="stylesheets/css/imgs/scenery.jpg" alt="A powerboat cruising in front of Piton Bay.">
+        <div class="heroImage" id="scenery"></div>
+        <!-- <img src="stylesheets/css/imgs/scenery.jpg" alt="A powerboat cruising in front of Piton Bay."> -->
         <div class="heroTextContainer">
           <h1>Witness&nbsp;Grandeur</h1>
-          <span>Experience some of nature’s spectacle up close and personal, from the comfort and familiarity of Reggae.</span>
+          <p>Experience some of nature’s spectacle up close and personal, from the comfort and familiarity of Reggae.</p>
         </div>
       </div>
       <div class="heroContainer">
         <div class="heroTextContainer">
           <h1>Experience&nbsp;the&nbsp;Tropics</h1>
-          <span>Enjoy one of hundreds of unique experiences in the British Virgin Islands, from the wonder of diving to the serenity of a beach.</span>
+          <p>Enjoy one of hundreds of unique experiences in the British Virgin Islands, from the wonder of diving to the serenity of a beach.</p>
         </div>
-        <img src="stylesheets/css/imgs/beach.jpg" alt="A tropical beach with clouds and the sea to the left and land to the right.">
-        <!-- <div class="heroImage" id="beach"></div> -->
+        <!-- <img src="stylesheets/css/imgs/beach.jpg" alt="A tropical beach with clouds and the sea to the left and land to the right."> -->
+        <div class="heroImage" id="beach"></div>
       </div>
       <div class="heroContainer">
-        <!-- <div class="heroImage" id="moorings"></div> -->
-        <img src="stylesheets/css/imgs/moorings.jpg" alt="Boats moored to a dock.">
+        <div class="heroImage" id="moorings"></div>
+        <!-- <img src="stylesheets/css/imgs/moorings.jpg" alt="Boats moored to a dock."> -->
         <div class="heroTextContainer">
           <h1>Explore&nbsp;with&nbsp;Confidence</h1>
-          <span>Professional services, fuel, groceries, restaurants, and libations are available from over 20 world-renowned ports in the B.V.I.</span>
+          <p>Professional services, fuel, groceries, restaurants, and libations are available from over 20 world-renowned ports in the B.V.I.</p>
         </div>
       </div>
     </div>
