Added animations to the heroes, and menus.  Refactored some code, used some placeholders.

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Navigo Corporation - It's your time to sail!</title>
     <link rel="shortcut icon" type="image/x-icon" href="favicon.png">
     <link href="https://fonts.googleapis.com/css?family=Barlow:300,400,700" rel="stylesheet">
@@ -17,7 +18,7 @@
         <a href="index.html">
         <div id="navBarLogo">
           <div id="logo">
-            <svg height=70px width=70px viewBox="0 0 723 764" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+            <svg height=65px width=65px viewBox="0 0 723 764" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
               <!-- Generator: Sketch 49.1 (51147) - http://www.bohemiancoding.com/sketch -->
               <title>logo copy</title>
               <desc>Created with Sketch.</desc>
@@ -45,7 +46,7 @@
         <div id="navBarOptions">
           <div class="navBarOption"><a href="#"><span>GALLERY</span></a></div>
           <div class="navBarOption"><a href="#"><span>MEMBERS</span></a>
-            <div class="navBarMenu" id="membersMenu">
+            <div class="navBarMenu">
               <ul>
                 <li><a href="#"><span class="barlowLight">Calendar</span></a></li>
                 <li><a href="#"><span class="barlowLight">Forum</span></a></li>
@@ -53,7 +54,7 @@
             </div>
           </div>
           <div class="navBarOption"><a href="#"><span>ABOUT</span></a>
-            <div class="navBarMenu" id="aboutMenu">
+            <div class="navBarMenu">
               <ul>
                 <li><a href="#"><span class="barlowLight">Deck&nbsp;Plan</span></a></li>
                 <li><a href="#"><span class="barlowLight">Locations</span></a></li>
@@ -67,25 +68,22 @@
 
       <!-- Heroes -->
 
-      <div class="heroContainer">
+      <div class="heroContainer" id="sceneryContainer">
         <div class="heroImage" id="scenery"></div>
-        <!-- <img src="stylesheets/css/imgs/scenery.jpg" alt="A powerboat cruising in front of Piton Bay."> -->
         <div class="heroTextContainer">
           <h1>Witness&nbsp;Grandeur</h1>
           <p>Experience some of nature’s spectacle up close and personal, from the comfort and familiarity of Reggae.</p>
         </div>
       </div>
-      <div class="heroContainer">
+      <div class="heroContainer" id="beachContainer">
         <div class="heroTextContainer">
           <h1>Experience&nbsp;the&nbsp;Tropics</h1>
           <p>Enjoy one of hundreds of unique experiences in the British Virgin Islands, from the wonder of diving to the serenity of a beach.</p>
         </div>
-        <!-- <img src="stylesheets/css/imgs/beach.jpg" alt="A tropical beach with clouds and the sea to the left and land to the right."> -->
         <div class="heroImage" id="beach"></div>
       </div>
-      <div class="heroContainer">
+      <div class="heroContainer" id="mooringsContainer">
         <div class="heroImage" id="moorings"></div>
-        <!-- <img src="stylesheets/css/imgs/moorings.jpg" alt="Boats moored to a dock."> -->
         <div class="heroTextContainer">
           <h1>Explore&nbsp;with&nbsp;Confidence</h1>
           <p>Professional services, fuel, groceries, restaurants, and libations are available from over 20 world-renowned ports in the B.V.I.</p>
